# cricguru

./: .gitignore  LICENSE.md  README.md  key.txt  pyproject.toml
cricguru/: __init__.py  main.py  player.py  scraper.py  team.py
cricguru/helpers/: data_extract.py
docs/: README.rst  conf.py  index.rst  install.rst  modules.rst  requirements.txt
docs/_build/doctrees/: README.doctree  cricguru.doctree  environment.pickle  index.doctree  install.doctree  modules.doctree  overview.doctree  usage.doctree
docs/_build/html/: .buildinfo  README.html  cricguru.html  genindex.html  index.html  install.html  modules.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/cricguru/: player.html  scraper.html  team.html
docs/_build/html/_sources/: cricguru.rst.txt  install.rst.txt  overview.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/source/: conf.py  cricguru.rst  index.rst  install.rst  usage.rst
tests/: test_player.py  test_team.py
