[tool.poetry]
name = "cricguru"
version = "0.1.0"
description = ""
authors = ["Pavithran <pavithranthilakanathan@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
