[tool.poetry]
name = "cricguru"
version = "1.0.0"
description = ""
authors = ["Pavithran <pavithranthilakanathan@gmai.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/puppetmaster12/cricguru"
repository = "https://github.com/puppetmaster12/cricguru"
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
